refactor(general): rename main css and js files and add log function

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	<body>
 		<h1>HI</h1>
 
-		<script src="/js/dist/test.js"></script>
+		<script src="/js/dist/index.js"></script>
 	</body>
 </html>
