--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/css/dist/index.css" />
+		<link rel="stylesheet" href="/dist/css/index.css" />
 		<title>silverBox</title>
 	</head>
 	<body>
 		<h1>HI</h1>
 
-		<script src="/js/dist/index.js"></script>
+		<script src="/dist/js/index.js"></script>
 	</body>
 </html>
