refactor(silverBox usage): use silveBox in index.js

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<h1>HI</h1>
-
+		<button id="showModal">Show Modal!</button>
 		<script src="/dist/js/index.js"></script>
 	</body>
 </html>
