feat(landing): add sidebar basic structure

--- a/index.html
+++ b/index.html
@@ -5,12 +5,28 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="/dist/css/index.css" />
-		<title>silverBox</title>
+		<title>SilverBox</title>
 	</head>
 	<body>
 		<div class="container">
-			<aside>aside</aside>
+			<aside class="sidebar show-sidebar">
+				<!-- nav -->
+				<nav>
+					<ul>
+						<a href="#whySilverBox"> <li>Why SilverBox?</li> </a>
+						<a href="#example"> <li>Example</li> </a>
+						<a href="#usage"> <li>Usage</li> </a>
+						<a href="#documentation"> <li>Documentation</li> </a>
+					</ul>
+				</nav>
 
+				<!-- hamburger icon -->
+				<label class="hamburger-menu show-x">
+					<input checked type="checkbox" />
+				</label>
+			</aside>
+
+			<!-- main -->
 			<main>main</main>
 		</div>
 		<script src="/dist/js/index.js"></script>
