refactor(landing): change some table styles and link sidebar buttons

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 				<!-- nav -->
 				<nav>
 					<ul>
-						<a href="#whySilverBox"> <li>Why SilverBox?</li> </a>
-						<a href="#example"> <li>Example</li> </a>
-						<a href="#usage"> <li>Usage</li> </a>
-						<a href="#documentation"> <li>Documentation</li> </a>
+						<a href="#heroSection"> <li>Why SilverBox?</li> </a>
+						<a href="#exampleSection"> <li>Example</li> </a>
+						<a href="#usageSection"> <li>Usage</li> </a>
+						<a href="#documentationSection"> <li>Documentation</li> </a>
 					</ul>
 				</nav>
 
@@ -59,6 +59,8 @@
 
 				<!-- example -->
 				<section id="exampleSection">
+					<h2 class="sectionHeader">Example</h2>
+
 					<div class="example">
 						<div class="exampleColumn">
 							<div class="exampleExplanation">
@@ -67,12 +69,12 @@
 							<button class="showExample">Hit me!</button>
 						</div>
 						<div class="exampleColumn">
-							<code class="exampleConfig">
-								<pre><code class="lang-javascript language-javascript">{
+							<div class="exampleConfig">
+								<pre><code>{
 	title: "man",
 	desc: "ye panadam"
 }</code></pre>
-							</code>
+							</div>
 						</div>
 					</div>
 				</section>
@@ -87,9 +89,19 @@
 					<h2 class="sectionHeader">Documentation</h2>
 
 					<div class="tableWrapper">
+						<div class="tableRow tableRowHeader">
+							<div class="tableColumn tableHeaderColumn">Argument</div>
+							<div class="tableColumn tableHeaderColumn">Explanation</div>
+						</div>
+
 						<div class="tableRow">
-							<div class="tableColumn">title</div>
-							<div class="tableColumn">explanation</div>
+							<div class="tableColumn">man</div>
+							<div class="tableColumn">royayi daram</div>
+						</div>
+
+						<div class="tableRow">
+							<div class="tableColumn">royayi</div>
+							<div class="tableColumn">ke gheyre momlken nist</div>
 						</div>
 					</div>
 				</section>
