refactor(landing/sidebar): change styles and make it prettier

--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
 				<!-- nav -->
 				<nav>
 					<ul>
+						<a class="navigationTitle"> <li>Navigation Menu</li> </a>
 						<a href="#heroSection"> <li>Why SilverBox?</li> </a>
 						<a href="#exampleSection"> <li>Example</li> </a>
 						<a href="#usageSection"> <li>Usage</li> </a>
-						<a href="#documentationSection"> <li>Documentation</li> </a>
+						<a href="#documentationSection">
+							<li>Documentation</li>
+						</a>
 					</ul>
 				</nav>
 
@@ -90,8 +93,12 @@
 
 					<div class="tableWrapper">
 						<div class="tableRow tableRowHeader">
-							<div class="tableColumn tableHeaderColumn">Argument</div>
-							<div class="tableColumn tableHeaderColumn">Explanation</div>
+							<div class="tableColumn tableHeaderColumn">
+								Argument
+							</div>
+							<div class="tableColumn tableHeaderColumn">
+								Explanation
+							</div>
 						</div>
 
 						<div class="tableRow">
@@ -101,7 +108,9 @@
 
 						<div class="tableRow">
 							<div class="tableColumn">royayi</div>
-							<div class="tableColumn">ke gheyre momlken nist</div>
+							<div class="tableColumn">
+								ke gheyre momlken nist
+							</div>
 						</div>
 					</div>
 				</section>
