feat(components/eachExample): add a component to create an example div
the example creation structure is complete, adding some examples is all remains

--- a/index.html
+++ b/index.html
@@ -1,70 +1,77 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link
-			rel="stylesheet"
-			href="/src/css/libraries/highlightJS/atom-one-dark-reasonable.min.css"
-		/>
-		<link rel="stylesheet" href="/dist/css/index.css" />
-		<title>SilverBox</title>
-	</head>
-	<body>
-		<div class="container">
-			<aside class="sidebar show-sidebar">
-				<!-- nav -->
-				<nav>
-					<ul>
-						<a class="navigationTitle"> <li>Navigation Menu</li> </a>
-						<a href="#heroSection"> <li>Why SilverBox?</li> </a>
-						<a href="#exampleSection"> <li>Example</li> </a>
-						<a href="#usageSection"> <li>Usage</li> </a>
-						<a href="#documentationSection">
-							<li>Documentation</li>
-						</a>
-					</ul>
-				</nav>
 
-				<!-- hamburger icon -->
-				<label class="hamburger-menu show-x">
-					<input checked type="checkbox" />
-				</label>
-			</aside>
+<head>
+	<meta charset="UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<link rel="stylesheet" href="/src/css/libraries/highlightJS/atom-one-dark-reasonable.min.css" />
+	<link rel="stylesheet" href="/dist/css/index.css" />
+	<title>SilverBox</title>
+</head>
 
-			<!-- main -->
-			<main>
-				<!-- hero section -->
-				<section id="heroSection">
-					<h2 class="tagline">
-						Simplifying complexity, empowering creativity
-					</h2>
+<body>
+	<div class="container">
+		<aside class="sidebar show-sidebar">
+			<!-- nav -->
+			<nav>
+				<ul>
+					<a class="navigationTitle">
+						<li>Navigation Menu</li>
+					</a>
+					<a href="#heroSection">
+						<li>Why SilverBox?</li>
+					</a>
+					<a href="#exampleSection">
+						<li>Example</li>
+					</a>
+					<a href="#usageSection">
+						<li>Usage</li>
+					</a>
+					<a href="#documentationSection">
+						<li>Documentation</li>
+					</a>
+				</ul>
+			</nav>
 
-					<div class="whySilverBox">
-						<div class="introduction">
-							Lorem ipsum dolor sit, amet consectetur adipisicing
-							elit. Qui cumque a esse eius similique assumenda
-							fuga iste, officia dolore illo inventore nam dolorem
-							non suscipit doloribus atque at natus nihil? Lorem
-							ipsum dolor sit, amet consectetur adipisicing elit.
-							Qui cumque a esse eius similique assumenda fuga
-							iste, officia dolore illo inventore nam dolorem non
-							suscipit doloribus atque at natus nihil? ipsum dolor
-							sit, amet consectetur adipisicing elit. Qui cumque a
-							esse eius similique assumenda fuga iste, officia
-							dolore illo inventore nam dolorem non suscipit
-							doloribus atque at natus nihil?
-						</div>
-						<img src="/src/images/anya.png" alt="" />
+			<!-- hamburger icon -->
+			<label class="hamburger-menu show-x">
+				<input checked type="checkbox" />
+			</label>
+		</aside>
+
+		<!-- main -->
+		<main>
+			<!-- hero section -->
+			<section id="heroSection">
+				<h2 class="tagline">
+					Simplifying complexity, empowering creativity
+				</h2>
+
+				<div class="whySilverBox">
+					<div class="introduction">
+						Lorem ipsum dolor sit, amet consectetur adipisicing
+						elit. Qui cumque a esse eius similique assumenda
+						fuga iste, officia dolore illo inventore nam dolorem
+						non suscipit doloribus atque at natus nihil? Lorem
+						ipsum dolor sit, amet consectetur adipisicing elit.
+						Qui cumque a esse eius similique assumenda fuga
+						iste, officia dolore illo inventore nam dolorem non
+						suscipit doloribus atque at natus nihil? ipsum dolor
+						sit, amet consectetur adipisicing elit. Qui cumque a
+						esse eius similique assumenda fuga iste, officia
+						dolore illo inventore nam dolorem non suscipit
+						doloribus atque at natus nihil?
 					</div>
-				</section>
+					<img src="/src/images/anya.png" alt="" />
+				</div>
+			</section>
 
-				<!-- example -->
-				<section id="exampleSection">
-					<h2 class="sectionHeader">Example</h2>
+			<!-- example -->
+			<section id="exampleSection">
+				<h2 class="sectionHeader">Example</h2>
 
-					<div class="example">
+				<!-- <div class="example">
 						<div class="exampleColumn">
 							<div class="exampleExplanation">
 								Show a modal with 2 inputs
@@ -79,51 +86,52 @@
 }</code></pre>
 							</div>
 						</div>
-					</div>
-				</section>
+					</div> -->
+			</section>
 
-				<!-- usage -->
-				<section id="usageSection">
-					<h2 class="sectionHeader">Usage</h2>
-				</section>
+			<!-- usage -->
+			<section id="usageSection">
+				<h2 class="sectionHeader">Usage</h2>
+			</section>
 
-				<!-- documentation -->
-				<section id="documentationSection">
-					<h2 class="sectionHeader">Documentation</h2>
+			<!-- documentation -->
+			<section id="documentationSection">
+				<h2 class="sectionHeader">Documentation</h2>
 
-					<div class="tableWrapper">
-						<div class="tableRow tableRowHeader">
-							<div class="tableColumn tableHeaderColumn">
-								Argument
-							</div>
-							<div class="tableColumn tableHeaderColumn">
-								Explanation
-							</div>
+				<div class="tableWrapper">
+					<div class="tableRow tableRowHeader">
+						<div class="tableColumn tableHeaderColumn">
+							Argument
 						</div>
-
-						<div class="tableRow">
-							<div class="tableColumn">man</div>
-							<div class="tableColumn">royayi daram</div>
-						</div>
-
-						<div class="tableRow">
-							<div class="tableColumn">royayi</div>
-							<div class="tableColumn">
-								ke gheyre momlken nist
-							</div>
+						<div class="tableColumn tableHeaderColumn">
+							Explanation
 						</div>
 					</div>
-				</section>
 
-				<!-- footer -->
-				<footer>footer</footer>
-			</main>
-		</div>
+					<div class="tableRow">
+						<div class="tableColumn">man</div>
+						<div class="tableColumn">royayi daram</div>
+					</div>
 
-		<script src="/src/js/libraries/highlightJS/highlight.min.js"></script>
-		<script>
-			hljs.highlightAll();
-		</script>
-		<script src="/dist/js/index.js"></script>
-	</body>
+					<div class="tableRow">
+						<div class="tableColumn">royayi</div>
+						<div class="tableColumn">
+							ke gheyre momlken nist
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<!-- footer -->
+			<footer>footer</footer>
+		</main>
+	</div>
+
+	<script src="/src/js/libraries/highlightJS/highlight.min.js"></script>
+	<script>
+		hljs.highlightAll();
+	</script>
+	<script src="/dist/js/index.js"></script>
+</body>
+
 </html>
