--- a/index.html
+++ b/index.html
@@ -1,116 +1,123 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="stylesheet"
+            href="/src/css/libraries/highlightJS/atom-one-dark-reasonable.min.css"
+        />
+        <link rel="stylesheet" href="/dist/css/index.css" />
+        <title>SilverBox</title>
+    </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="/src/css/libraries/highlightJS/atom-one-dark-reasonable.min.css" />
-	<link rel="stylesheet" href="/dist/css/index.css" />
-	<title>SilverBox</title>
-</head>
+    <body>
+        <div class="container">
+            <aside class="sidebar show-sidebar">
+                <!-- nav -->
+                <nav>
+                    <ul>
+                        <a class="navigationTitle">
+                            <li>Navigation Menu</li>
+                        </a>
+                        <a href="#heroSection">
+                            <li>Why SilverBox?</li>
+                        </a>
+                        <a href="#exampleSection">
+                            <li>Example</li>
+                        </a>
+                        <a href="#usageSection">
+                            <li>Usage</li>
+                        </a>
+                        <a href="#documentationSection">
+                            <li>Documentation</li>
+                        </a>
+                    </ul>
+                </nav>
 
-<body>
-	<div class="container">
-		<aside class="sidebar show-sidebar">
-			<!-- nav -->
-			<nav>
-				<ul>
-					<a class="navigationTitle">
-						<li>Navigation Menu</li>
-					</a>
-					<a href="#heroSection">
-						<li>Why SilverBox?</li>
-					</a>
-					<a href="#exampleSection">
-						<li>Example</li>
-					</a>
-					<a href="#usageSection">
-						<li>Usage</li>
-					</a>
-					<a href="#documentationSection">
-						<li>Documentation</li>
-					</a>
-				</ul>
-			</nav>
+                <!-- hamburger icon -->
+                <label class="hamburger-menu show-x">
+                    <input checked type="checkbox" />
+                </label>
+            </aside>
 
-			<!-- hamburger icon -->
-			<label class="hamburger-menu show-x">
-				<input checked type="checkbox" />
-			</label>
-		</aside>
+            <!-- main -->
+            <main>
+                <!-- hero section -->
+                <section id="heroSection">
+                    <h2 class="tagline">
+                        Simplifying complexity, empowering creativity
+                    </h2>
 
-		<!-- main -->
-		<main>
-			<!-- hero section -->
-			<section id="heroSection">
-				<h2 class="tagline">
-					Simplifying complexity, empowering creativity
-				</h2>
+                    <div class="whySilverBox">
+                        <div class="introduction">
+                            The ultimate JavaScript modal library designed to
+                            provide easy access and customization to give
+                            developers complete control over their modals. With
+                            <span class="silverBoxName">SilverBox</span>,
+                            creating modals based on a specific configuration
+                            becomes hassle-free, allowing developers to focus on
+                            the crucial aspects of their project. Whether it’s a
+                            simple notification or a complex form,
+                            <span class="silverBoxName">SilverBox</span>’s
+                            developer-friendly structure caters to various user
+                            requirements. Plus, it’s highly customizable,
+                            ensuring a seamless integration with your design and
+                            user interface. With
+                            <span class="silverBoxName">SilverBox</span>, you
+                            can enhance your website’s user experience while
+                            keeping development work efficient and streamlined -
+                            making it a must-have tool for developers of all
+                            skill levels.
+                        </div>
+                        <img src="src/images/silverBoxHeroSection.png" alt="" />
+                    </div>
+                </section>
 
-				<div class="whySilverBox">
-					<div class="introduction">
-						Lorem ipsum dolor sit, amet consectetur adipisicing
-						elit. Qui cumque a esse eius similique assumenda
-						fuga iste, officia dolore illo inventore nam dolorem
-						non suscipit doloribus atque at natus nihil? Lorem
-						ipsum dolor sit, amet consectetur adipisicing elit.
-						Qui cumque a esse eius similique assumenda fuga
-						iste, officia dolore illo inventore nam dolorem non
-						suscipit doloribus atque at natus nihil? ipsum dolor
-						sit, amet consectetur adipisicing elit. Qui cumque a
-						esse eius similique assumenda fuga iste, officia
-						dolore illo inventore nam dolorem non suscipit
-						doloribus atque at natus nihil?
-					</div>
-					<img src="/src/images/anya.png" alt="" />
-				</div>
-			</section>
+                <!-- example -->
+                <section id="exampleSection">
+                    <h2 class="sectionHeader">Example</h2>
+                </section>
 
-			<!-- example -->
-			<section id="exampleSection">
-				<h2 class="sectionHeader">Example</h2>
-			</section>
+                <!-- usage -->
+                <section id="usageSection">
+                    <h2 class="sectionHeader">Usage</h2>
+                </section>
 
-			<!-- usage -->
-			<section id="usageSection">
-				<h2 class="sectionHeader">Usage</h2>
-			</section>
+                <!-- documentation -->
+                <section id="documentationSection">
+                    <h2 class="sectionHeader">Documentation</h2>
 
-			<!-- documentation -->
-			<section id="documentationSection">
-				<h2 class="sectionHeader">Documentation</h2>
+                    <div class="tableWrapper">
+                        <div class="tableRow tableRowHeader">
+                            <div class="tableColumn tableHeaderColumn">
+                                Argument
+                            </div>
+                            <div class="tableColumn tableHeaderColumn">
+                                Explanation
+                            </div>
+                        </div>
+                    </div>
+                </section>
 
-				<div class="tableWrapper">
-					<div class="tableRow tableRowHeader">
-						<div class="tableColumn tableHeaderColumn">
-							Argument
-						</div>
-						<div class="tableColumn tableHeaderColumn">
-							Explanation
-						</div>
-					</div>
-				</div>
-			</section>
+                <!-- team -->
+                <section id="theTeamSection">
+                    <h2 class="sectionHeader">The Team</h2>
 
-			<!-- team -->
-			<section id="theTeamSection">
-				<h2 class="sectionHeader">The Team</h2>
+                    <!-- team members -->
+                    <div class="teamMembers"></div>
+                </section>
 
-				<!-- team members -->
-				<div class="teamMembers"></div>
-			</section>
+                <!-- footer -->
+                <footer>footer</footer>
+            </main>
+        </div>
 
-			<!-- footer -->
-			<footer>footer</footer>
-		</main>
-	</div>
-
-	<script src="/src/js/libraries/highlightJS/highlight.min.js"></script>
-	<script>
-		hljs.highlightAll();
-	</script>
-	<script src="/dist/js/index.js"></script>
-</body>
-
+        <script src="/src/js/libraries/highlightJS/highlight.min.js"></script>
+        <script>
+            hljs.highlightAll();
+        </script>
+        <script src="/dist/js/index.js"></script>
+    </body>
 </html>
