feat(icon): add silverBox icon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             rel="stylesheet"
             href="/src/css/libraries/highlightJS/atom-one-dark-reasonable.min.css"
         />
+		<link rel="icon" href="src/images/silverBox-TransParent.png">
         <link rel="stylesheet" href="/dist/css/index.css" />
         <title>SilverBox</title>
     </head>
