refactor(index.html / heroSection) change paragraph and style

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             rel="stylesheet"
             href="/src/css/libraries/highlightJS/atom-one-dark-reasonable.min.css"
         />
-		<link rel="icon" href="src/images/silverBox-TransParent.png">
+        <link rel="icon" href="src/images/silverBox-TransParent.png" />
         <link rel="stylesheet" href="/dist/css/index.css" />
         <title>SilverBox</title>
     </head>
@@ -53,24 +53,12 @@
 
                     <div class="whySilverBox">
                         <div class="introduction">
-                            The ultimate JavaScript modal library designed to
-                            provide easy access and customization to give
-                            developers complete control over their modals. With
-                            <span class="silverBoxName">SilverBox</span>,
-                            creating modals based on a specific configuration
-                            becomes hassle-free, allowing developers to focus on
-                            the crucial aspects of their project. Whether it’s a
-                            simple notification or a complex form,
-                            <span class="silverBoxName">SilverBox</span>’s
-                            developer-friendly structure caters to various user
-                            requirements. Plus, it’s highly customizable,
-                            ensuring a seamless integration with your design and
-                            user interface. With
-                            <span class="silverBoxName">SilverBox</span>, you
-                            can enhance your website’s user experience while
-                            keeping development work efficient and streamlined -
-                            making it a must-have tool for developers of all
-                            skill levels.
+                            A customizable, user-friendly JavaScript modal
+                            library that simplifies the creation of modals based
+                            on specific configurations, catering to developers
+                            of all skill levels. With SilverBox, create modals
+                            hassle-free, enhance the user experience, and
+                            streamline development work.
                         </div>
                         <img src="src/images/silverBoxHeroSection.png" alt="" />
                     </div>
