fix(index/footer): typo and emoji

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
         <!-- footer -->
         <footer style="text-align: center" id="footer-asli">
-            Made with 💓 from Busheher 
+            Made with ♥️ from Bushehr 
             <br />
             Special thanks to
             <a
