fix(footer): fix input footer

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </main>
         </div>
         <!-- footer -->
-        <footer style="text-align: center" id="footer-asli">
+        <footer style="text-align: center" id="footer">
             Made with ♥️ from Bushehr 
             <br />
             Special thanks to
