--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </main>
         </div>
         <!-- footer -->
-        <footer style="text-align: center" id="footer">
+        <footer style="text-align: center">
             Made with ♥️ from Bushehr 
             <br />
             Special thanks to
