feat(index): add usage instructions

--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
                 <!-- usage -->
                 <section id="usageSection">
                     <h2 class="sectionHeader">Usage</h2>
+
+                    <div id="usageInstructions">
+                        <p class="step1">Initialize the plugin by referencing the necessary files:</p>
+                        <pre><code class="language-html step1"></code></pre>
+                        <p class="step2">Call the silverBox function after the page has loaded:</p>
+                        <pre><code class="language-javascript step2"></code></pre>
+                    </div>
                 </section>
 
                 <!-- documentation -->
@@ -112,7 +119,7 @@
                 href="https://sweetalert2.github.io/"
                 target="_blank"
                 id="sweetAlert"
-                >SweetAlert</a
+                >SweetAlert2</a
             >
             and
             <a
@@ -124,9 +131,6 @@
         </footer>
 
         <script src="/dist/js/libraries/highlightJS/highlight.min.js"></script>
-        <script>
-            hljs.highlightAll();
-        </script>
         <script src="/dist/js/index.js"></script>
     </body>
 </html>
