feat(components/renderExample): add copy button to examples
also call copyConfig function for each button

--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
                         <img src="src/images/silverBoxHeroSection.png" alt="" />
                     </div>
                 </section>
-
-                example
+                <!-- example -->
                 <section id="exampleSection">
                     <h2 class="sectionHeader">Example</h2>
                 </section>
