feat(landing): add silverBox banner

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     </head>
 
     <body>
+        <div id="silverBox-banner">
+            <img src="src/images/silverBox-TransParent.png" alt="test" style="width: 100px;">
+            <span>SilverBox</span>
+        </div>
         <div class="container">
             <aside class="sidebar show-sidebar">
                 <!-- nav -->
