--- a/index.html
+++ b/index.html
@@ -1,128 +1,117 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link
-            rel="stylesheet"
-            href="/dist/css/libraries/highlightJS/atom-one-dark-reasonable.min.css"
-        />
-        <link rel="icon" href="src/images/silverBox-TransParent.png" />
-        <link rel="stylesheet" href="/dist/css/index.css" />
-        <title>SilverBox</title>
-    </head>
 
-    <body>
-        <div id="silverBox-banner">
-            <img src="src/images/silverBox-TransParent.png" alt="test" style="width: 100px;">
-            <span>SilverBox</span>
-        </div>
-        <div class="container">
-            <aside class="sidebar show-sidebar">
-                <!-- nav -->
-                <nav>
-                    <ul>
-                        <a class="navigationTitle">
-                            <li>Navigation Menu</li>
-                        </a>
-                        <a href="#heroSection">
-                            <li>Why SilverBox?</li>
-                        </a>
-                        <a href="#exampleSection">
-                            <li>Example</li>
-                        </a>
-                        <a href="#usageSection">
-                            <li>Usage</li>
-                        </a>
-                        <a href="#documentationSection">
-                            <li>Documentation</li>
-                        </a>
-                    </ul>
-                </nav>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/dist/css/libraries/highlightJS/atom-one-dark-reasonable.min.css" />
+    <link rel="icon" href="src/images/silverBox-TransParent.png" />
+    <link rel="stylesheet" href="/dist/css/index.css" />
+    <title>SilverBox</title>
+</head>
 
-                <!-- hamburger icon -->
-                <label class="hamburger-menu show-x">
-                    <input checked type="checkbox" />
-                </label>
-            </aside>
+<body>
+    <div id="silverBox-banner">
+        <img src="src/images/silverBox-TransParent.png" alt="test" style="width: 100px;">
+        <span>SilverBox</span>
+    </div>
+    <div class="container">
+        <aside class="sidebar show-sidebar">
+            <!-- nav -->
+            <nav>
+                <ul>
+                    <li class="navigationTitle">
+                        <a>Navigation Menu</a>
+                    </li>
+                    <li>
+                        <a href="#heroSection">Why SilverBox? </a>
+                    </li>
+                    <li>
+                        <a href="#exampleSection">Example</a>
+                    </li>
+                    <li>
+                        <a href="#usageSection">Usage</a>
+                    </li>
+                    <li id="drop-down">
+                        <a href="#documentationSection">Documentation </a>
+                    </li>
+                </ul>
+            </nav>
 
-            <!-- main -->
-            <main>
-                <!-- hero section -->
-                <section id="heroSection">
-                    <h2 class="tagline">
-                        Simplifying complexity, empowering creativity
-                    </h2>
+            <!-- hamburger icon -->
+            <label class="hamburger-menu show-x">
+                <input checked type="checkbox" />
+            </label>
+        </aside>
 
-                    <div class="whySilverBox">
-                        <div class="introduction">
-                            A customizable, user-friendly JavaScript modal
-                            library that simplifies the creation of modals based
-                            on specific configurations, catering to developers
-                            of all skill levels. With
-                            <span id="silverBox-name-tag">SilverBox</span>,
-                            create modals hassle-free, enhance the user
-                            experience, and streamline development work.
-                        </div>
-                        <img src="src/images/silverBoxHeroSection.png" alt="" />
+        <!-- main -->
+        <main>
+            <!-- hero section -->
+            <section id="heroSection">
+                <h2 class="tagline">
+                    Simplifying complexity, empowering creativity
+                </h2>
+
+                <div class="whySilverBox">
+                    <div class="introduction">
+                        A customizable, user-friendly JavaScript modal
+                        library that simplifies the creation of modals based
+                        on specific configurations, catering to developers
+                        of all skill levels. With
+                        <span id="silverBox-name-tag">SilverBox</span>,
+                        create modals hassle-free, enhance the user
+                        experience, and streamline development work.
                     </div>
-                </section>
-                <!-- example -->
-                <section id="exampleSection">
-                    <h2 class="sectionHeader">Example</h2>
-                </section>
+                    <img src="src/images/silverBoxHeroSection.png" alt="" />
+                </div>
+            </section>
+            <!-- example -->
+            <section id="exampleSection">
+                <h2 class="sectionHeader">Example</h2>
+            </section>
 
-                <!-- usage -->
-                <section id="usageSection">
-                    <h2 class="sectionHeader">Usage</h2>
+            <!-- usage -->
+            <section id="usageSection">
+                <h2 class="sectionHeader">Usage</h2>
 
-                    <div id="usageInstructions">
-                        <p class="step1">Initialize the plugin by referencing the necessary files:</p>
-                        <pre><code class="language-html step1"></code></pre>
-                        <p class="step2">Call the silverBox function after the page has loaded:</p>
-                        <pre><code class="language-javascript step2"></code></pre>
-                    </div>
-                </section>
+                <div id="usageInstructions">
+                    <p class="step1">Initialize the plugin by referencing the necessary files:</p>
+                    <pre><code class="language-html step1"></code></pre>
+                    <p class="step2">Call the silverBox function after the page has loaded:</p>
+                    <pre><code class="language-javascript step2"></code></pre>
+                </div>
+            </section>
 
-                <!-- documentation -->
-                <section id="documentationSection">
-                    <h2 class="sectionHeader">Documentation</h2>
+            <!-- documentation -->
+            <section id="documentationSection">
+                <h2 class="sectionHeader">Documentation</h2>
 
-                    <div class="tableWrapper">
-                    </div>
-                </section>
+                <div class="tableWrapper">
+                </div>
+            </section>
 
-                <!-- credits -->
-                <section id="theCreditsSection" class="hidden">
-                    <h2 class="sectionHeader">Credits</h2>
+            <!-- credits -->
+            <section id="theCreditsSection" class="hidden">
+                <h2 class="sectionHeader">Credits</h2>
 
-                    <!-- team members -->
-                    <div class="teamMembers"></div>
-                </section>
-            </main>
-        </div>
-        <!-- footer -->
-        <footer style="text-align: center">
-            Made with ♥️ from Bushehr 
-            <br />
-            Special thanks to
-            <a
-                href="https://sweetalert2.github.io/"
-                target="_blank"
-                id="sweetAlert"
-                >SweetAlert2</a
-            >
-            and
-            <a
-                href="https://www.untitledui.com/"
-                target="_blank"
-                id="Untitled-UI"
-                >Untitled UI</a
-            >
-        </footer>
+                <!-- team members -->
+                <div class="teamMembers"></div>
+            </section>
+        </main>
+    </div>
+    <!-- footer -->
+    <footer style="text-align: center">
+        Made with ♥️ from Bushehr
+        <br />
+        Special thanks to
+        <a href="https://sweetalert2.github.io/" target="_blank" id="sweetAlert">SweetAlert2</a>
+        and
+        <a href="https://www.untitledui.com/" target="_blank" id="Untitled-UI">Untitled UI</a>
+    </footer>
 
-        <script src="/dist/js/libraries/highlightJS/highlight.min.js"></script>
-        <script src="/dist/js/index.js"></script>
-    </body>
+    <script src="/dist/js/libraries/highlightJS/highlight.min.js"></script>
+    <script src="/dist/js/index.js"></script>
+</body>
+
 </html>
