refactor(general): ClassName and IDs are now unique

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <img src="src/images/silverBox-TransParent.png" alt="test" style="width: 100px;">
         <span>SilverBox</span>
     </div>
-    <div class="container">
-        <aside class="sidebar show-sidebar">
+    <div class="silverBox-container">
+        <aside class="silverBox-sidebar silverBox-show-sidebar">
             <!-- nav -->
             <nav>
                 <ul>
@@ -25,22 +25,22 @@
                         <a>Navigation Menu</a>
                     </li>
                     <li>
-                        <a href="#heroSection">Why SilverBox? </a>
+                        <a href="#silverBox-heroSection">Why SilverBox? </a>
                     </li>
                     <li>
-                        <a href="#exampleSection">Example</a>
+                        <a href="#silverBox-exampleSection">Example</a>
                     </li>
                     <li>
-                        <a href="#usageSection">Usage</a>
+                        <a href="#silverBox-usageSection">Usage</a>
                     </li>
                     <li id="drop-down">
-                        <a href="#documentationSection">Documentation </a>
+                        <a href="#silverBox-documentationSection">Documentation </a>
                     </li>
                 </ul>
             </nav>
 
             <!-- hamburger icon -->
-            <label class="hamburger-menu show-x">
+            <label class="silverBox-hamburger-menu silverBox-show-x">
                 <input checked type="checkbox" />
             </label>
         </aside>
@@ -48,13 +48,13 @@
         <!-- main -->
         <main>
             <!-- hero section -->
-            <section id="heroSection">
-                <h2 class="tagline">
+            <section id="silverBox-heroSection">
+                <h2 class="silverBox-tagline">
                     Simplifying complexity, empowering creativity
                 </h2>
 
                 <div class="whySilverBox">
-                    <div class="introduction">
+                    <div class="silverBox-introduction">
                         A customizable, user-friendly JavaScript modal
                         library that simplifies the creation of modals based
                         on specific configurations, catering to developers
@@ -67,15 +67,15 @@
                 </div>
             </section>
             <!-- example -->
-            <section id="exampleSection">
-                <h2 class="sectionHeader">Example</h2>
+            <section id="silverBox-exampleSection">
+                <h2 class="silverBox-sectionHeader">Example</h2>
             </section>
 
             <!-- usage -->
-            <section id="usageSection">
-                <h2 class="sectionHeader">Usage</h2>
+            <section id="silverBox-usageSection">
+                <h2 class="silverBox-sectionHeader">Usage</h2>
 
-                <div id="usageInstructions">
+                <div id="silverBox-usageInstructions">
                     <p class="step1">Initialize the plugin by referencing the necessary files:</p>
                     <pre><code class="language-html step1"></code></pre>
                     <p class="step2">Call the silverBox function after the page has loaded:</p>
@@ -84,19 +84,19 @@
             </section>
 
             <!-- documentation -->
-            <section id="documentationSection">
-                <h2 class="sectionHeader">Documentation</h2>
+            <section id="silverBox-documentationSection">
+                <h2 class="silverBox-sectionHeader">Documentation</h2>
 
-                <div class="tableWrapper">
+                <div class="silverBox-tableWrapper">
                 </div>
             </section>
 
             <!-- credits -->
-            <section id="theCreditsSection" class="hidden">
-                <h2 class="sectionHeader">Credits</h2>
+            <section id="silverBox-CreditsSection" class="hidden">
+                <h2 class="silverBox-sectionHeader">Credits</h2>
 
                 <!-- team members -->
-                <div class="teamMembers"></div>
+                <div class="silverBox-teamMembers"></div>
             </section>
         </main>
     </div>
