style(landing page): change hero section style

--- a/index.html
+++ b/index.html
@@ -16,6 +16,29 @@
         <img src="src/images/silverBox-TransParent.png" alt="test" style="width: 100px;">
         <span>SilverBox</span>
     </div>
+    <!-- hero section -->
+    <section id="silverBox-heroSection">
+        <!-- container -->
+        <div class="silverBox-container">
+
+            <h2 class="silverBox-tagline">
+                Simplifying complexity, Empowering creativity
+            </h2>
+
+            <div class="whySilverBox">
+                <div class="silverBox-introduction">
+                    A customizable, user-friendly JavaScript modal
+                    library that simplifies the creation of modals based
+                    on specific configurations, catering to developers
+                    of all skill levels. With
+                    <span id="silverBox-name-tag">SilverBox</span>,
+                    create modals hassle-free, enhance the user
+                    experience, and streamline development work.
+                </div>
+            </div>
+            <button class="get-silverBox">get silverbox</button>
+        </div>
+    </section>
     <div class="silverBox-container">
         <aside class="silverBox-sidebar silverBox-show-sidebar">
             <!-- nav -->
@@ -47,25 +70,6 @@
 
         <!-- main -->
         <main>
-            <!-- hero section -->
-            <section id="silverBox-heroSection">
-                <h2 class="silverBox-tagline">
-                    Simplifying complexity, empowering creativity
-                </h2>
-
-                <div class="whySilverBox">
-                    <div class="silverBox-introduction">
-                        A customizable, user-friendly JavaScript modal
-                        library that simplifies the creation of modals based
-                        on specific configurations, catering to developers
-                        of all skill levels. With
-                        <span id="silverBox-name-tag">SilverBox</span>,
-                        create modals hassle-free, enhance the user
-                        experience, and streamline development work.
-                    </div>
-                    <img src="src/images/silverBoxHeroSection.png" alt="" />
-                </div>
-            </section>
             <!-- example -->
             <section id="silverBox-exampleSection">
                 <h2 class="silverBox-sectionHeader">Example</h2>
